Working with html

--- a/Training1.html
+++ b/Training1.html
@@ -12,6 +12,9 @@
 <h5> Heading 5 </h5>
 <h6> Heading 6 </h6>
 <p> Paragraph </p>
+<p>..</p>
+<p>Go back to the Training 3 training below</p>
+<a href="Training3.html">Training 3</a>
 </body>
 
 </html>
