Added links to the webpages

--- a/Training1.html
+++ b/Training1.html
@@ -13,8 +13,10 @@
 <h6> Heading 6 </h6>
 <p> Paragraph </p>
 <p>..</p>
-<p>Go back to the Training 3 training below</p>
+<p>Go back to the other trainings below</p>
+<a href="Training2.html">Training 2</a>
 <a href="Training3.html">Training 3</a>
+<a href="Training4.html">Training 4</a>
 </body>
 
 </html>
