--- a/Training2.html
+++ b/Training2.html
@@ -1,12 +1,18 @@
 <DOCTYPE html>
     <html>
-        <head>
-            <title>Training 2</title>
-        </head>
 
-        <body>
-            <h1>Training 2 with live server</h1>
-            <p>This is to try running the live server extension in VsCode</p>
-            <h2>The Start</h2>
-        </body>
+    <head>
+        <title>Training 2</title>
+    </head>
+
+    <body>
+        <h1>Training 2 with live server</h1>
+        <p>This is to try running the live server extension in VsCode</p>
+        <h2>The Start</h2>
+        <p style="font-style: italic; font-family:sans-serif; color:chocolate">Below are links to different training pages</p>
+        <a href="Training1.html">Training 1</a>
+        <a href="Training3.html">Training 3</a>
+        <a href="Training4.html">Training 4</a>
+    </body>
+
     </html>
