Added new webpage for CSS

--- a/Training2.html
+++ b/Training2.html
@@ -13,6 +13,7 @@
         <a href="Training1.html">Training 1</a>
         <a href="Training3.html">Training 3</a>
         <a href="Training4.html">Training 4</a>
+        <a href="Training5.html">Training 5</a>
     </body>
 
     </html>
