--- a/Training4.html
+++ b/Training4.html
@@ -5,8 +5,9 @@
         <title>Training 4</title>
     </head>
 
-    <body>
+    <body style="background-color:lightgreen;">
         <h1 style="text-align: center; background-color: powderblue; font-family: Lucida Sans;">HTML Training 4</h1>
+        <p>This page has a background color of light green</p>
         <b>This is bold</b>
         <P>This is regular</P>
         <strong>This is strong!</strong>
@@ -22,4 +23,9 @@
         <a href="Training1.html">Training 1</a>
         <a href="Training2.html">Training 2</a> 
         <a href="Training3.html">Training 3</a> 
+        <a href="Training5.html">Training 5</a>
+        <!--
+        This is a comment block
+        I can add comments here without affecting the code
+        -->
     </body>
