Working with external CSS

--- a/Training1.html
+++ b/Training1.html
@@ -1,23 +1,25 @@
 <DOCTYPE html>
-<html lang="en">
-<head>
-<title>HTML Training</title>
-</head>
+    <html lang="en">
 
-<body>
-<h1> Heading 1 </h1>
-<h2> Heading 2 </h2>
-<h3> Heading 3 </h3> <!--This is a comment-->
-<h4> Heading 4 </h4>
-<h5> Heading 5 </h5>
-<h6> Heading 6 </h6>
-<p> Paragraph </p>
-<p>..</p>
-<p>Go back to the other trainings below</p>
-<a href="Training2.html">Training 2</a>
-<a href="Training3.html">Training 3</a>
-<a href="Training4.html">Training 4</a>
-<a href="Training5.html">Training 5</a>
-</body>
+    <head>
+        <title>HTML Training</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-</html>
+    <body>
+        <h1> Heading 1 </h1>
+        <h2> Heading 2 </h2>
+        <h3> Heading 3 </h3> <!--This is a comment-->
+        <h4> Heading 4 </h4>
+        <h5> Heading 5 </h5>
+        <h6> Heading 6 </h6>
+        <p> This is a Paragraph </p>
+        <p>..</p>
+        <p>Go back to the other trainings below</p>
+        <a href="Training2.html">Training 2</a>
+        <a href="Training3.html">Training 3</a>
+        <a href="Training4.html">Training 4</a>
+        <a href="Training5.html">Training 5</a>
+    </body>
+
+    </html>
