--- a/Training5.html
+++ b/Training5.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Training 5</title>
-    </head>
 
-    <body>
-        <h1 style="text-align: center;">Working with CSS</h1>
-        <p>This are links to go to the different trainings</p>
-        <a href="Training1.html">Training 1</a>
-        <a href="Training2.html">Training 2</a> 
-        <a href="Training3.html">Training 3</a> 
-        <a href="Training4.html">Training 4</a>
-    </body>
+<head>
+    <title>Training 5</title>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+
+        h1 {
+            text-align: center;
+            color: red;
+            font-family: Georgia;
+        }
+
+        p {
+            font-family: Arial;
+            font-style: italic
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Working with CSS</h1>
+    <p>This is the introduction to working with internal CSS<br>
+        CSS stands for Cascading Style Sheets<br>
+        This may be done <ins>inline</ins>, <mark>internal</mark>, or with <ins>external</ins> links to CSS</p>
+
+    <h1>Links to other trainings</h1>
+    <p>These are links to go to the different trainings</p>
+    <a href="Training1.html">Training 1</a>
+    <a href="Training2.html">Training 2</a>
+    <a href="Training3.html">Training 3</a>
+    <a href="Training4.html">Training 4</a>
+</body>
