--- a/Personal_web.html
+++ b/Personal_web.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Masai</h1>
-    <p> <b>Name:</b> Masai <br>
+    <p> <b>Name:</b> Masai Franklin <br>
         <b>Education:</b> MSc Mechanical Engineering <br>
         <b>Project:</b> Development of wireless corrosion sensors
     </p>
@@ -29,8 +29,8 @@
     </ol>
     <img src="https://electropeak.com/pub/media/catalog/product/cache/95f75205f3b943f313b30831421df8c2/s/e/sen-13-045-1-loadcell-sensor-1kg.jpg" alt="Load cell" Height="200px" Width="200px">
     <img src="./images/limit_switch.png" alt="Limit switch" Height="200px" Width="200px">
-    <img src="./images/potentiometer.jpg" alt="Potentiometer" Height="200px" Width="200px">
-    <img src="./images/motor.jpg" alt="Motor" Height="200px" Width="200px">
+    <img src="./images/potentiometer.png" alt="Potentiometer" Height="200px" Width="200px">
+    <img src="./images/motor.png" alt="Motor" Height="200px" Width="200px">
     </p>
     <p>
         Another notable project was the development of an Arduino-based heartbeat monitor. <br>
