Created a README markdown file

--- a/Personal_web.html
+++ b/Personal_web.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Masai</h1>
-    <p> <b>Name:</b> Masai Franklin <br>
+    <p> <b>Name:</b> Franklin Masai <br>
         <b>Education:</b> MSc Mechanical Engineering <br>
         <b>Project:</b> Development of wireless corrosion sensors
     </p>
@@ -27,7 +27,8 @@
         <li>Motor</li>
         <li>LEDs</li>
     </ol>
-    <img src="https://electropeak.com/pub/media/catalog/product/cache/95f75205f3b943f313b30831421df8c2/s/e/sen-13-045-1-loadcell-sensor-1kg.jpg" alt="Load cell" Height="200px" Width="200px">
+    <img src="https://electropeak.com/pub/media/catalog/product/cache/95f75205f3b943f313b30831421df8c2/s/e/sen-13-045-1-loadcell-sensor-1kg.jpg"
+        alt="Load cell" Height="200px" Width="200px">
     <img src="./images/limit_switch.png" alt="Limit switch" Height="200px" Width="200px">
     <img src="./images/potentiometer.png" alt="Potentiometer" Height="200px" Width="200px">
     <img src="./images/motor.png" alt="Motor" Height="200px" Width="200px">
